--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,13 +1,21 @@
+@charset "UTF-8"
 
-
-
-
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 html, body {
     height: 100vh;
     width: 100vw;
     background-color: black;
 }
+main{
+    height: 100vh;
+    position: relative;
+    }
+
 body {
     background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
@@ -16,12 +24,6 @@ body {
 head {
     display: none;
 }
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 
 section#telefone {
     background: url(../imagens/frame-iphone.png);
@@ -36,9 +38,6 @@ section#telefone {
 
 section#redes-sociais {
     text-align: right;
-    
-    
-    
 }
 
 section#redes-sociais img {
@@ -55,4 +54,10 @@ iframe#tela {
     left: 22px;
     width: 267px;
     height: 471px; 
+}
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.619);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.668);
+    transition: transform .3s, border .5s; 
 }
